[gd_scene load_steps=9 format=3 uid="uid://k2djpqqnemv8"]

[ext_resource type="Script" path="res://Scripts/final_boss.gd" id="1_kq0m2"]
[ext_resource type="Texture2D" uid="uid://dge2k5dkwh8s1" path="res://Assets/colored-transparent_packed.png" id="2_p5xy1"]
[ext_resource type="FontFile" uid="uid://dho5idw3u4c35" path="res://Assets/Kenney Pixel.ttf" id="3_b4juv"]
[ext_resource type="Script" path="res://Scripts/boss_bullet_manager.gd" id="4_d6uwq"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jy1w2"]
size = Vector2(20, 25)

[sub_resource type="Animation" id="Animation_rtr72"]
resource_name = "Hit"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(0.373563, 0.0702976, 0.521308, 1), Color(1, 1, 1, 1), Color(0.373563, 0.0702976, 0.521308, 1)]
}

[sub_resource type="Animation" id="Animation_eej8n"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.373563, 0.0702976, 0.521308, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_15xjh"]
_data = {
"Hit": SubResource("Animation_rtr72"),
"RESET": SubResource("Animation_eej8n")
}

[node name="FinalBoss" type="CharacterBody2D" groups=["Enemy", "Wall"]]
script = ExtResource("1_kq0m2")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(0.373563, 0.0702976, 0.521308, 1)
scale = Vector2(3, 3)
texture = ExtResource("2_p5xy1")
region_enabled = true
region_rect = Rect2(400.303, 128.918, 15.6297, 15.0362)

[node name="LabelHealth" type="Label" parent="."]
offset_left = -20.0
offset_top = -42.0
offset_right = 20.0
offset_bottom = -19.0
theme_override_fonts/font = ExtResource("3_b4juv")
theme_override_font_sizes/font_size = 25
text = "
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -2.5)
shape = SubResource("RectangleShape2D_jy1w2")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_15xjh")
}

[node name="SFX" type="AudioStreamPlayer" parent="."]

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="BossBulletManager" type="Node2D" parent="."]
script = ExtResource("4_d6uwq")

[node name="SpawnPoint" type="Marker2D" parent="."]
position = Vector2(0, 23)

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
